# skeg-llamaindex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/skeg_llamaindex/: __init__.py  vector_store.py
tests/: conftest.py  test_vector_store.py  test_vector_store_edge.py
