[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeg-llamaindex"
version = "0.1.0a0"
description = "LlamaIndex VectorStore adapter for skeg."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "skeg authors" }]
keywords = ["llamaindex", "vector-store", "skeg", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Framework :: LlamaIndex",
]
dependencies = [
    # We expect skeg-py to be installed in editable mode from the
    # monorepo (../python). For an actual PyPI release we'll pin a
    # version: "skeg>=0.1,<0.2".
    "skeg",
    # llama-index-core is intentionally a soft dependency: the adapter
    # imports from it lazily so importing this package without
    # llama-index installed only fails at instantiation time, not at
    # `import skeg_llamaindex`.
    "llama-index-core>=0.10",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/skegdb/skeg-llamaindex"
Repository = "https://github.com/skegdb/skeg-llamaindex"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-v"
