[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeg-llamaindex"
version = "0.1.0"
description = "LlamaIndex VectorStore adapter for skeg."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "skeg authors" }]
keywords = ["llamaindex", "vector-store", "skeg", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Framework :: LlamaIndex",
]
dependencies = [
    # `skeg` is the Python client. Pinned to the same major as this
    # adapter so a major bump on either side is a deliberate breaking
    # change.
    "skeg>=0.1.0,<0.2",
    # llama-index-core is imported lazily by the adapter, so `import
    # skeg_llamaindex` only fails at instantiation time if it is
    # missing.
    "llama-index-core>=0.10",
    # The adapter hashes node ids with xxh64 to produce u64 vector ids
    # for skeg's `SKEG.VSET` (the wire id is fixed-width). Pinned to
    # match what skeg-py uses internally.
    "xxhash>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/skegdb/skeg-llamaindex"
Repository = "https://github.com/skegdb/skeg-llamaindex"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-v"
